--- a/vignettes/diffobj.Rmd
+++ b/vignettes/diffobj.Rmd
@@ -18,15 +18,10 @@ vignette: >
 
 ```{r, results="asis"}
 library(diffobj)
-a <- matrix(1:9, 3)
-b <- matrix(1:9, 3)
-b[5] <- 1
-mdl1 <- lm(Sepal.Length ~ Sepal.Width, iris)
-mdl2 <- lm(Sepal.Length ~ Sepal.Width + Species, iris.3)
-diff_str(
-  mdl1, mdl2, mode="sidebyside",
-  etc=etc(style=diffObjStyleHtml(css.mode="internal"))
-)
+set.seed(1)
+a <- b <- matrix(sample(1:50), 10)
+b[sample(1:50, 5)] <- sample(1:50, 5)
+diff_print(a, b, mode="sidebyside")
 ```
 
 The `diffobj` functions were written originally to compare unit test results and quickly identify the nature of test regressions.  They work best with small objects or objects that are mostly alike, but can be used with other objects too.
@@ -45,44 +40,41 @@ There are a variety of related functions for comparing objects:
 ## Output
 
 The result of the diff provides the information necessary to transform the
-\code{target} object into the \code{current} object.  This involves deletions
-from and additions to \code{target}.  The deletions and additions are done
-linewise.  Each deleted line will have \code{- } prepended to it, and each
-added line will have \code{+ } prepended to it.  If your terminal supports
+`target` object into the `current` object.  This involves deletions
+from and additions to `target`.  The deletions and additions are done
+linewise.  Each deleted line will have `- ` prepended to it, and each
+added line will have `+ ` prepended to it.  If your terminal supports
 ANSI escape sequences the additions and deletions will be color coded.
 
 The first lines of output clarify the coding convention by showing the
-\code{target} object with the deletion symbology, and the \code{current}
+`target` object with the deletion symbology, and the `current`
 object with the addition symbology.  After these lines you will see the
-first and possibly only hunk header.  The format will be \code{@@ x,y z,w @@}
-where \code{x} and \code{z} indicate the starting line of the text in
-the \code{target} and \code{current} objects that is shown after the hunk
-header.  \code{y} and \code{w} indicate how many lines from each of those
+first and possibly only hunk header.  The format will be `@@ x,y z,w @@`
+where `x` and `z` indicate the starting line of the text in
+the `target` and `current` objects that is shown after the hunk
+header.  `y` and `w` indicate how many lines from each of those
 objects are being shown.
 
 In addition to the primary line diff, hunks are themselves word-diffed within
 each hunk to help quickly identify small differences.  Just keep in mind that
-the \code{+-} symbols always relate to the original line diff.  The
+the `+-` symbols always relate to the original line diff.  The
 word-diff is indicated only by the ANSI escape sequence styling and will not
 be visible if your terminal does not support them or if you disable them.
 
-The output format used here is loosely based on the \code{git diff} format.
+The output format used here is loosely based on the `git diff` format.
 
 ## Algorithm
 
 The diff algorithm is Myer's solution to the shortest edit script /
 longest common sequence problem with the Hirschberg linear space refinement
 as described in:
-\cite{
-E. Myers, \dQuote{An O(ND) Difference Algorithm and Its Variations},
+> E. Myers, "An O(ND) Difference Algorithm and Its Variations",
 Algorithmica 1, 2 (1986), 251-266.
 \url{http://www.cs.arizona.edu/people/gene/PAPERS/diff.ps}
-}
+
 and should be the same algorithm used by GNU diff.  The implementation
 used here is an adaptation of Michael B. Allen's diff program from the
-\href{
-   http://www.ioplex.com/~miallen/libmba/dl/libmba-0.9.1.tar.gz
-}{\code{libmba}} \code{C} library.
+[`libmba`](http://www.ioplex.com/~miallen/libmba/dl/libmba-0.9.1.tar.gz) `C` library.
 
 This algorithm scales with the _square_ of the number of differences
 between compared objects so is most effective when comparing objects
