--- a/vignettes/diffobj.Rmd
+++ b/vignettes/diffobj.Rmd
@@ -21,7 +21,7 @@ library(diffobj)
 set.seed(1)
 a <- b <- matrix(sample(1:50), 10)
 b[sample(1:50, 5)] <- sample(1:50, 5)
-diff_print(a, b, mode="sidebyside")
+diffPrint(a, b, mode="sidebyside")
 ```
 
 The `diffobj` functions were written originally to compare unit test results and quickly identify the nature of test regressions.  They work best with small objects or objects that are mostly alike, but can be used with other objects too.
