--- a/vignettes/diffobj.Rmd
+++ b/vignettes/diffobj.Rmd
@@ -13,6 +13,10 @@ vignette: >
 
 ---
 
+```{r, echo=FALSE}
+old.opt <- options(diffobj.disp.width=80)
+on.exit(old.opt, add=TRUE)
+```
 ## Introduction
 
 `diffobj` uses the same comparison mechanism used by `git diff` and `diff` to highlight differences between _rendered_ R objects:
@@ -20,7 +24,9 @@ vignette: >
 ```{r, results="asis"}
 library(diffobj)
 a <- b <- matrix(1:100, ncol=2)
-b[c(20, 45, 68)] <- 999
+a <- a[-20,]
+b <- b[-45,]
+b[c(18, 44)] <- 999
 diffPrint(target=a, current=b)
 ```
 
@@ -45,7 +51,7 @@ diffPrint(target=a, current=b)[1]
 After the legend come the hunks, which are portions of the objects that have differences with nearby matching lines provided for context:
 
 ```{r, results="asis", echo=FALSE}
-diffPrint(target=a, current=b)[2:9]
+diffPrint(target=a, current=b)[2:10]
 ```
 
 At the top of the hunk is the hunk header: this tells us that the first displayed hunk (including context lines), starts at line 17 and spans 7 lines for both `a` and `b`.  These are display lines, not object row indices, which is why the first row shown of the matrix is row 16.  You might have also noticed that the line after the hunk header is out of place:
@@ -59,24 +65,53 @@ This is a special context line that is not technically part of the hunk, but is 
 The actual mismatched lines are highlighted in the colors of the legend, with additional visual cues in the gutters should colors be unavailable:
 
 ```{r, results="asis", echo=FALSE}
-diffPrint(target=a, current=b)[6]
+diffPrint(target=a, current=b)[6:9]
 ```
 
-`diffobj` uses a line by line diff to identify which portions of each of the objects are mismatches, so even if only part of a line mismatches it will be considered different.  Subsequent to the line diff, `diffobj` will run a word diff within each paired set of insertions and deletions to attempt to identify which components of the line chnaged.  Here you can see here the number `68` has been replaced by `999`.
+`diffobj` uses a line by line diff to identify which portions of each of the objects are mismatches, so even if only part of a line mismatches it will be considered different.  `diffobj` then runs a word diff within the hunks and further highlights mismatching words.
 
-### Idiosyncracies
+Let's examine the last two lines from the previous hunk more closely:
 
-At times diffs will produce outputs that are superficially unintuitive.  For example:
+```{r, results="asis", echo=FALSE}
+diffPrint(target=a, current=b)[8:9]
+```
+
+Here `b` has an extra line so `diffobj` adds an empty line to `a` to maintain the alignment for subsequent matching lines.  This additional line is marked with a tilde in the gutter and is shown in a different color to indicate it is not part of the original text.
+
+If you look closely at the next matching line you will notice they are not quite the same.  The row indeces are different, but `diffobj` excludes row indices from the diff so that rows that are identical otherwise are shown as matching.  `diffobj` indicates this is happening by showing the portions of a line that are ignored in the diff in grey.
+
+### Atomic Vectors
+
+Since R can display multiple elements in an atomic vector on the same line, and `diffPrint` is fundamentally a line diff, we use specialized logic when diffing atomic vectors.  Consider:
 
 ```{r, results="asis"}
-diffPrint(t(matrix(1:12, 3)), t(matrix(2:13, 3)))
+state.abb2 <- state.abb[-16]
+state.abb2[37] <- "Pennsylvania"
+diffPrint(state.abb, state.abb2)
 ```
 
-Row headers such as `[2,]` are highlighted as being differences, when clearly they have matching values in both objects.  What is happening here is that the diff algorithm prefers to match the `4` from row 2 in the left object to the `4` from row 1 in the right.  To do that the algorithm must delete the `[2,]`, match the `4`, and re-insert the `[2,]`.  Anytime a token is "moved" in this way it will show up as the combination of a deletion and an insertion, which is why both `[2,]` tokens are highlighted as changed.
+Due to the different wrapping frequency no line in the text display of our two vectors matches.  Despite this, `diffPrint` only highlights the lines that actually contain differences.  The side effect is that lines that only contain matching elements are shown as matching even though the actual lines may be different.  You can turn off this behavior in favor of a normal line diff with the `unwrap.atomic` argument to `diffPrint`.
+
+This method of comparing vectors is a compromise that may in some circumstances produce sub-optimal results.  You can also use `diffChr` (see below) to do a direct element by element comparison.
 
 ## Other Diff Functions
 
-### Compare Structure
+### Method Overview
+
+`diffobj` defines several S4 generics and default methods to go along with them.  Each of them uses a different text representation of the inputs:
+
+* `diffPrint`: use the `print`/`show` output and is the one used in the examples so far
+* `diffStr`: use the output of `str`
+* `diffObj`: picks between `print`/`show` and `str` depending on which provides the "best" overview of differences
+* `diffChr`: coerces the inputs to atomic character vectors with `as.character`, and runs the diff on the character vector
+* `diffFile`: compares the text content of two files
+* `diffCsv`: loads two CSV files into data frames and compare the data frames with `diffPrint`
+* `diffDeparse`: deparses and compares the character vectors produced by the depasing
+* `ses`: computes the element by element shortest edit script on two character vectors
+
+Note the `diff*` functions use lowerCamelCase in keeping with S4 method name convention, whereas the package name itself is all lower case.
+
+### Compare Structure with `diffStr`
 
 For complex objects it is often useful to compare structures:
 
@@ -88,20 +123,19 @@ diffStr(mdl1$qr, mdl2$qr, line.limit=15)
 
 If you specify a `line.limit` with `diffStr` it will fold nested levels in order to fit under `line.limit`, so long as there remain visible differences.  If you prefer to see all the differences you can leave `line.limit` unspecified.
 
-### Function Overview
+### Compare Vectors Elements with `diffChr`
 
-There are a variety of related functions for comparing objects:
+Sometimes it is useful to do a direct element by element comparison:
 
-* `diffPrint`: use the `print`/`show` output
-* `diffStr`: use the output of `str`
-* `diffObj`: pick between `print`/`show` and `str` depending on which provides the "best" overview of differences
-* `diffChr`: use the contents of character vectors instead of their display representations
-* `diffFile`: compare the text content of two files
-* `diffCsv`: load two CSV files into data frames and compare the data frames with `diffPrint`
-* `diffDeparse`: compare the deparsed objects
-* `ses`: compute the element by element shortest edit script on two character vectors
+```{r, results="asis"}
+diffChr(letters[1:3], c("a", "B", "c"))
+```
 
-Note the `diff*` functions use lowerCamelCase in keeping with S4 method name convention, whereas the package name itself is all lower case.
+Notice how we are comparing the contents of the vectors with one line per element.
+
+### Why S4?
+
+The `diff*` functions are defined as S4 generics with default methods (signature `c("ANY", "ANY")` so that users can customize behavior for their own objects.  For example, a custom method could set many of the default parameters to values more suitable for a particular object.  If the objects in question are S3 objects the S3 class will have to be registered with `setOldClass`.
 
 ## Controlling Diffs and Their Appearance
 
@@ -181,7 +215,7 @@ Here are examples of terminal screen renderings for both "rgb" and "yb" `color.m
 
 The examples for "light" and "dark" have the backgrounds forcefully set to a color compatible with the scheme.  In actual use the base background and foreground colors are left unchanged, which will look bad if you use "dark" with light colored backgrounds or vice versa.  Since we do not know of a good cross platform way of detecting terminal background color the default `brightness` value is "neutral".
 
-At this time the only `format` that is affected by this parameter is `brightness`.  If you want to specify your own light/dark/neutral schemes you may do so either by specifying a [`style`](#styles) directly or with [`Palette of Styles`](#styles).
+At this time the only `format` that is affected by this parameter is `brightness`.  If you want to specify your own light/dark/neutral schemes you may do so either by specifying a [style](#styles) directly or with [Palette of Styles](#styles).
 
 ### Pagers
 
@@ -197,7 +231,7 @@ The default is to auto pick a style based on the values of the `format`, `color.
 
 ## Algorithm
 
-The diff algorithm is Myer's solution to the shortest edit script /
+The primary diff algorithm is Myer's solution to the shortest edit script /
 longest common sequence problem with the Hirschberg linear space refinement
 as described in:
 
@@ -208,13 +242,17 @@ and should be the same algorithm used by GNU diff.  The implementation
 used here is an adaptation of Michael B. Allen's diff program from the
 [`libmba`](http://www.ioplex.com/~miallen/libmba/dl/libmba-0.9.1.tar.gz) `C` library.
 
-This algorithm scales with the _square_ of the number of differences
+This algorithm scales with the _square_ of the number of _differences_.
 between compared objects so is most effective when comparing objects
 that are mostly similar.
 
+Unless you have a diff with many (> 10K) differences, odds are that the slow step in the process will be the post-processing this package does to generate the display representation of the diff, rather than the diff itself.
+
 ## Acknowledgements
 
-* Eugene Myers for the algorithm
+* R Core for creating and publishing R, a wonderful programming language
+* Eugene Myers for the diff algorithm
 * Michael B. Allen for implementing it in C
-* Gábor Csárdi for the `crayon` package
+* Gábor Csárdi for adding a whole new dimension to the R terminal experience with the `crayon` package
+* Jim Hester for `covr`, and also for unwittingly sowing the seed that sprouted into this package
 * Hadley Wickham for the `devtools` and `testthat` packages
